# childhood

./: .gitignore  README.md  go.mod  go.sum
asm6f/: .gitignore  CMakeLists.txt
doc/: nes_emu.txt  nestech.txt
example/: NROM-128.asm  build.bat  build.sh  example.asm  nes.inc  ram.inc  sound.asm
go/chr2png/: .gitignore  Gopkg.toml  main.go  palettes.go  run.bat  run.sh
go/dumper/: .gitignore  extract.go  header.go  main.go  mapper.go  run.bat  run.sh
go/gui/: main.go
go/mgnes/: .gitignore  README.md  bus.go  bus_test.go  disassembly.go  instruction.go  log.go  main.go  memory.go  mg6502.go  optable.go
go/mgnes/cmd/mgnescli/: main.go
go/mgnes/cmd/pure6502/: main.go  plainbus.go
go/mgnes/pkg/: bus.go  bus_test.go  cartridge.go  disassembly.go  header.go  instruction.go  log.go  mapper.go  memory.go  mg2C02.go  mg6502.go  optable.go
go/mgnes/pkg/bus/: bus.go
go/mgnes/pkg/cartridge/: cartridge.go  header.go  loader.go  mapper.go
go/mgnes/pkg/ines/: header.go
go/mgnes/pkg/log/: log.go
go/mgnes/pkg/mappers/: loader.go  mapper.go  mapper_000.go
go/mgnes/pkg/memory/: memory.go
go/mgnes/pkg/mg2c02/: mg2c02.go
go/mgnes/pkg/mg6502/: disassembly.go  instruction.go  mg6502.go  optable.go  reader.go  writer.go
go/mgnes/scripts/: build.sh
go/nes/mos6502/: opcodes.go
go/nes/nes6502/: bus.go  bus_test.go  cpu.go  memory.go  opcodes.go  register.go
go/palette/: main.go
mynes/: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT
mynes/mynes-bin/: Cargo.toml
mynes/mynes-bin/src/: lib.rs
mynes/mynes-bin/src/cli/: foo.rs  mod.rs  version.rs
mynes/mynes-bin/src/cli/dump/: chr.rs  mod.rs  rom.rs
mynes/mynes-bin/src/err/: mod.rs
mynes/mynes-bin/src/logging/: env_filter.rs  mod.rs
mynes/mynes-bin/src/palette/: mod.rs  palettes.rs
mynes/mynes-common/: Cargo.toml
mynes/mynes-common/src/: lib.rs
mynes/mynes-common/src/cst/: mod.rs
mynes/mynes-common/src/env/: mod.rs
mynes/mynes-common/src/macros/: mod.rs
mynes/mynes-common/src/mem/: mod.rs
mynes/mynes-compiler/: Cargo.toml  README.md
mynes/mynes-compiler/benches/: assembly_speed.rs
mynes/mynes-compiler/examples/: hello_world.asm  sprite_demo.asm
mynes/mynes-compiler/src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
mynes/mynes-compiler/src/core/: assembler.rs  machine.rs  memory.rs  mod.rs  passes.rs
mynes/mynes-compiler/src/instructions/: addressing.rs  encoding.rs  mod.rs  opcodes.rs  validation.rs
mynes/mynes-compiler/src/macros/: definition.rs  expansion.rs  functions.rs  mod.rs
mynes/mynes-compiler/src/output/: listing.rs  mod.rs  rom.rs  symbols.rs
mynes/mynes-compiler/src/parsing/: directives.rs  expressions.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
mynes/mynes-compiler/src/platform/: mod.rs  nes.rs
mynes/mynes-compiler/src/symbols/: mod.rs  resolver.rs  scope.rs  table.rs
mynes/mynes-compiler/tests/: basic_assembly.rs
mynes/mynes-compiler/tests/common/: mod.rs
mynes/mynes-rom/: Cargo.toml
mynes/mynes-rom/src/: lib.rs
mynes/mynes-rom/src/err/: mod.rs
mynes/mynes-rom/src/header/: mod.rs
nes_corelib/examples/00_skeleton/: 00_skeleton.asm  build.sh
nes_corelib/examples/01_helloBG/: build.sh
nesasm/: .gitignore
nesasm/source/: Makefile  assemble.c  code.c  command.c  commit.h  crc.c  defs.h  expr.c  expr.h  externs.h  func.c  input.c  inst.h  macro.c  main.c  nes.c  nes.h  output.c  proc.c  protos.h  symbol.c  vars.h
