[workspace]
members = ["mynes-bin", "mynes-common"]
resolver = "2"

[workspace.package]
homepage = "https://githhub.com/master-g/childhood/mynes"
repository = "https://githhub.com/master-g/childhood/mynes"
authors = ["master-g <master-g@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bit_reverse = "0.1"
env_logger = "0.11"
hex = "0.4.3"
image = "0.25"
lazy_static = "1"
log = { version = "0.4", default-features = false }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
test-log = { version = "0.2", features = ["trace"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "fat"

[profile.bench]
debug = true
