[workspace]
resolver = "3"
members = ["mynes-bin", "mynes-common", "mynes-rom", "mynes-compiler"]

[workspace.package]
version = "0.1.0"
authors = ["master-g <master-g@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.89.0"
homepage = "https://githhub.com/master-g/childhood/mynes"
repository = "https://githhub.com/master-g/childhood/mynes"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.99"
bit_reverse = "0.1.8"
clap = { version = "4.5.45", features = ["derive", "color", "suggestions"] }
crc = "3.3.0"
criterion = "0.7"
env_logger = "0.11.8"
hex = "0.4.3"
image = "0.25.6"
indexmap = "2.10.0"
log = { version = "0.4.27", default-features = false }
nom = "8.0"
once_cell = "1.21.3"
pretty_assertions = "1.4"
proptest = "1.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
toml = "0.9.5"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "fat"

[profile.bench]
debug = true
