[package]
name = "mynes-bin"
description = "A toolkit for working with NES ROMs"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mynes-cli"
path = "src/bin/main.rs"
bench = false

[lints]
workspace = true

[dependencies]
mynes-common = { path = "../mynes-common" }
mynes-rom = { path = "../mynes-rom" }

bit_reverse = { workspace = true }
clap = { version = "4.5", default-features = false, features = [
	"derive",
	"env",
	"error-context",
	"help",
	"std",
	"suggestions",
	"unicode",
	"usage",
] }
clap-verbosity-flag = { version = "2.2", default-features = false }
hex = { workspace = true }
image = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
	"html_reports",
	"async_tokio",
] }
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }

[features]
bench = []

[lib]
bench = false

[[bench]]
name = "main"
harness = false
required-features = ["bench"]

[build-dependencies]
semver = "1.0.23"
