[package]
name = "mynes-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "A modern NES assembler and compiler written in Rust"
keywords = ["nes", "assembler", "6502", "compiler", "retro"]
categories = ["development-tools", "compilers"]

[dependencies]
# CLI and configuration
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Parsing
nom = { workspace = true }

# Configuration
toml = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }

# File I/O and utilities
hex = { workspace = true }

# Optional dependencies for advanced features
crc = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }

[dev-dependencies]
test-log = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["crc-validation", "advanced-symbols"]
crc-validation = ["dep:crc"]
advanced-symbols = ["dep:indexmap"]

[lib]
name = "nes_compiler"
path = "src/lib.rs"

[[bin]]
name = "nesasm"
path = "src/main.rs"

[[bench]]
name = "assembly_speed"
harness = false
required-features = ["crc-validation"]

[package.metadata.docs.rs]
features = ["crc-validation", "advanced-symbols"]
rustdoc-args = ["--cfg", "docsrs"]
