[package]
name = "mynes-rom"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
